# Bashirah

./: App.tsx  LICENSE.md  README.md  capacitor.config.ts  index.html  metadata.json  package-lock.json  package.json  routes.tsx  types.ts  vite.config.ts
.github/workflows/: build-release.yml
android/app/: build.gradle
android/app/src/main/java/com/aiprojek/bashirah/: MainActivity.java
android/app/src/main/res/values/: strings.xml
components/: AsmaulHusnaDetailModal.tsx  AudioDownloadModal.tsx  AudioPlayer.tsx  AyatOfTheDay.tsx  ConfirmationModal.tsx  FontSettingsModal.tsx  Header.tsx  KhatamCelebrationModal.tsx  KhatamWidget.tsx  LanguageModal.tsx  Loading.tsx  Logo.tsx  MemorizationSettingsModal.tsx  MushafView.tsx  NoteEditorModal.tsx  QuickJumpModal.tsx  ReadingHeatmap.tsx  Search.tsx  SettingsModal.tsx  ShareVerseModal.tsx  Sidebar.tsx  SurahCard.tsx  SurahInfoModal.tsx  TajweedText.tsx  Toast.tsx  VerseItem.tsx  WordDetailModal.tsx  WordItem.tsx
contexts/: AudioContext.tsx  LanguageContext.tsx  ThemeContext.tsx
pages/: AboutPage.tsx  AsmaulHusnaPage.tsx  DuaCollectionPage.tsx  EmotionPage.tsx  HomePage.tsx  LibraryPage.tsx  QuizPage.tsx  SettingsPage.tsx  SurahDetailPage.tsx  TadabburPage.tsx  TajweedLearnPage.tsx  TopicIndexPage.tsx
public/: sw.js
qruan-json/: surah-info.json
services/: asmaulHusnaData.ts  audioService.ts  backupService.ts  db.ts  duaData.ts  emotionData.ts  i18n.ts  mushafService.ts  quranMeta.ts  quranService.ts  storageService.ts  tajweedData.ts  topicData.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
